WIP - adding pcitures to events

--- a/client/views/app.html
+++ b/client/views/app.html
@@ -21,17 +21,38 @@
 </form>
 
 <!-- A list of events! -->
-<ul data-bind="foreach: events, visible: events().length > 0">
-    <li>
-        <span data-bind="text: title"></span>
-    </li> 
-</ul>
-<select data-bind="options: events, optionsCaption: 'Select event', optionsText: 'title', value: selectedEvent"></select>
+<table>
+    <thead>
+        <tr><th>Title</th>
+    </thead>
+    <tbody data-bind="foreach: events">
+        <tr>
+            <td data-bind="text: title"></td>
+            <td>
+                <table>
+                    <tbody>
+                        <tr data-bind="foreach: photos">
+                            <td><img data-bind="attr: {src: 'data:image/png;base64,' + photo.data}" /></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
- <input type="file" accept="image/*" data-bind="file: imageFile, fileObjectURL: imageObjectURL, fileBinaryData: imageBinary"/>
-<div data-bind="if: imageObjectURL">
-    <img class="thumb" data-bind="attr: { src: imageObjectURL }"/>
-</div>
-<button data-bind="jqButton: { enable: true }">Add to event</button>
+<select data-bind="options: events, optionsCaption: 'Select event', optionsText: 'title', value: selectedEvent"></select>
+<button data-bind="jqButton: { enable: true }, click: addPhotoToEvent">Add to event</button>
+
+        <div data-bind="foreach: { data: images, beforeRemove: beforeRemoveSlot }">
+            <div>
+                <input type="file" accept="image/*" data-bind="file: imageFile, fileObjectURL: imageObjectURL, fileBinaryData: imageBinary"/>
+                <div data-bind="if: imageObjectURL">
+                    <img class="thumb" data-bind="attr: { src: imageObjectURL }"/>
+                </div>
+                <div>Size: <span data-bind="text: fileSize"></span>&nbsp;bytes</div>
+            </div>
+        </div>
+
 </body>
 </html>
